@startuml clases_notificaciones

title Diagrama de Clases — apps.notificaciones (P6: Notificaciones)

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #EFF6FF
  BorderColor #1A5276
}

enum "Notificacion.Estado" as EstadoNotif {
  PENDIENTE
  ENVIADA
  ERROR
}

class Notificacion {
  + asunto: CharField(250)
  + cuerpo: TextField
  + estado: CharField(20) = PENDIENTE
  + error_detalle: TextField
  + fecha_creacion: DateTimeField <<auto_now_add>>
  + fecha_envio: DateTimeField {nullable}
  --
  + __str__(): str
}
note right of Notificacion
  No usa lógica de negocio propia en el modelo:
  la orquestación vive en services.py (CU27),
  que crea la fila y encola tarea_enviar_email()
  (Celery, cola "celery", 3 reintentos).
end note

class "Usuario" as Usuario <<apps.acceso>>

Notificacion "0..*" --> "1" Usuario : usuario\n(on_delete=CASCADE)
note on link
  related_name="notificaciones"
  (navegable: usuario.notificaciones)
end note

Notificacion ..> EstadoNotif : estado

@enduml
